# rust-playground

./: README.md
axum-test/: Cargo.toml  README.md
axum-test/src/: lib.rs  main.rs  route_handlers.rs
axum-test/src/application/: application.rs
axum-test/src/application/logging/: tracing.rs
mcp-client-tests/antigma_labs/: Cargo.toml
mcp-client-tests/antigma_labs/src/: main.rs
mcp-client-tests/darinkishore/: Cargo.toml
mcp-client-tests/darinkishore/src/: main.rs
reqwest-test/: Cargo.toml  README.md
reqwest-test/src/: main.rs  reqwest_tee_middleware.rs
sqlite-vec-index/: Cargo.toml  README.md  onnx_models  onnxruntime
sqlite-vec-index/src/: lib.rs  main.rs
sqlite-vec-index/src/application/: background.rs
sqlite-vec-index/src/embedder/: embedder.rs
sqlite-vec-index/src/indexes/: caching.rs  mod.rs  snippet.rs
sqlite-vec-index/src/repo/: filesystem.rs  iterator.rs  state.rs
sqlite-vec-index/src/semantic_search/: client.rs  payload_helpers.rs  schema.rs
web-search-cli/: Cargo.toml  README.md
web-search-cli/src/: brave.rs  exa.rs  main.rs  mod.rs  rate_limit.rs  search_service.rs  types.rs
