[package]
name = "axum-test"
version = "0.1.0"
edition = "2021"

[features]
debug = []

[dependencies]
anyhow = "1.0.93"
axum = { version = "0.7.9", features = ["http2", "macros"] }
color-eyre = "0.6.3"
console-subscriber = "0.4.1"
erased-serde = "0.4.5"
http = "1.1.0"
http-body-util = "0.1.2"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["auth", "cors", "catch-panic", "fs", "trace"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
