[package]
name = "web-search-apis"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.85"
clap = { version = "4.5.3", features = ["derive"] }
colog = "1.3.0"
im = "15.1.0"
lazy_static = "1.5.0"
log = "0.4.25"
reqwest = { version = "0.12.12", features = ["gzip", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
